...
        }}
      />
      <Tabs.Screen
        name="fire"
        options={{
          title: "FIRE",
          tabBarButtonTestID: "tab-fire",
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="flame-outline" color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
...
